tests/reject/classMissingSuperInit.emojic
🐇 🐟 🍇
  🔑 🐈 🆕 🍇

  🍉

  🐖 🙋 🍇
    😀 🔤I’m a fish.🔤
  🍉
🍉

🐇 🎪 🍇
  🐇🐖 🕸 fish 🐟 🍇
    😀 🔤Added fish🔤
  🍉
🍉

🐇 🐡 🐟 🍇
  🔑 🐈 🆕 🍇

  🍉

  ✒️  🐖 🙋 🍇
    😀 🔤I’m a blowfish.🔤
  🍉
🍉

🏁 🍇
  🍦 fish 🔷🐟🆕
  🙋 fish
🍉
